portal/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: portal-backend
          image: registry.gitlab.com/biomedit/portal/web:5.3.1-dev.16
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: portal-config
              mountPath: /usr/src/app/.config.json
              subPath: config.json
      volumes:
        - name: portal-config
          secret:
            secretName: portal-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: portal-frontend
          image: registry.gitlab.com/biomedit/portal/frontend:5.3.1-dev.16
          ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: portal-db
          image: postgres:13
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data
            - name: db-init
              mountPath: /docker-entrypoint-initdb.d/00-init-db.sh
              subPath: init-db.sh
      volumes:
        - name: db-init
          configMap:
            name: db-init
        - name: db-data
          emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: portal-nginx
          image: nginx:1.19.4-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: portal-public
              mountPath: /app/public
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
        - name: portal-public
          emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-celery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery
  template:
    metadata:
      labels:
        app: celery
    spec:
      containers:
        - name: portal-celery
          image: registry.gitlab.com/biomedit/portal/web:5.3.1-dev.16
          command: ["celery", "-A", "portal", "worker", "-l", "info"]
          volumeMounts:
            - name: portal-config
              mountPath: /usr/src/app/.config.json
              subPath: config.json
        - name: portal-celery-beat
          image: registry.gitlab.com/biomedit/portal/web:5.3.1-dev.16
          command: ["celery", "-A", "portal", "beat", "-l", "info"]
          volumeMounts:
            - name: portal-config
              mountPath: /usr/src/app/.config.json
              subPath: config.json
        - name: portal-redis
          image: docker.io/library/redis:6-alpine
          ports:
            - containerPort: 6379

      volumes:
        - name: portal-config
          secret:
            secretName: portal-config
