portal/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: portal-backend
spec:
  ports:
    - name: http
      port: 8000
  selector:
    app: backend
---
apiVersion: v1
kind: Service
metadata:
  name: portal-frontend
spec:
  ports:
    - name: http
      port: 3000
  selector:
    app: frontend
---
apiVersion: v1
kind: Service
metadata:
  name: portal-nginx
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: portal-db
spec:
  ports:
    - name: postgres
      port: 5432
  selector:
    app: db
