portal/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-portal
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1$2$3
spec:
  rules:
    - host: null
      http:
        paths:
          - path: /(backend|auth)(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: portal-backend
                port:
                  name: http
          - path: /(static)(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: portal-nginx
                port:
                  name: http
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: portal-frontend
                port:
                  name: http
